build search recipes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,8 +14,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="/">Can Cook</a>
-            <form class="d-flex">
-                <input class="form-control mr-3" type="search" placeholder="Search your recipes" name="q">
+            <form class="d-flex" action="/recipes">
+                <input class="form-control mr-3" type="search" placeholder="Search your recipes" name="q" id="search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
