--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %} Homepage {% endblock %}
 {% block content %}
+
 <h1>Homepage</h1>
 
 <div class="alert alert-success" role="foof-joke">
@@ -9,11 +10,11 @@
 
 <div class="card-group">
     {% for row in random_recipes | batch(4) %}
-    <div class="card">
+    <div class="card m-3">
         {% for random_recipe in row %}
 
         {% if not random_recipe['image'] %}
-        <img src="../asset/default-image.jpeg">
+        <img src="./asset/default-image.jpeg">
         {% else %}
         <img src="{{ random_recipe['image'] }}" class="card-img-top" alt="{{ random_recipe['title'] }}">
         {% endif %}
