--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
 
 <h1>Homepage</h1>
 
-<div class="alert alert-success" role="foof-joke">
+<div class="alert alert-success" role="food-joke">
     Food Joke: {{ random_joke }}
 </div>
 
