--- a/app/templates/users/user_detail.html
+++ b/app/templates/users/user_detail.html
@@ -49,7 +49,7 @@
                         <hr>
                         <div class="row">
                             <div class="col-sm-12">
-                                <a class="btn btn-info " href="#">Edit</a>
+                                <a class="btn btn-info " href="user/edit">Edit</a>
                             </div>
                         </div>
                     </div>
