--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,10 +17,14 @@
                 <input class="form-control mr-3" type="search" placeholder="Search your recipes" name="q" id="search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+
             {% if g.user %}
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link"href="/user">{{ g.user.username }}</a>
+                        <a class="nav-link" href="/user">{{ g.user.username }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/favorites">Favorite</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
