--- a/app/templates/users/user_detail.html
+++ b/app/templates/users/user_detail.html
@@ -43,7 +43,7 @@
                                 <h6 class="mb-0">Password</h6>
                             </div>
                             <div class="col-sm-9 text-secondary" type="password">
-                                ........
+                                <a href="#">Change password</a>
                             </div>
                         </div>
                         <hr>
