--- a/app/templates/users/user_detail.html
+++ b/app/templates/users/user_detail.html
@@ -48,9 +48,16 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="col-sm-12">
+                            <div class="col-sm-3">
                                 <a class="btn btn-info " href="user/edit">Edit</a>
                             </div>
+
+                            <div class="col-sm-9">
+                                <form method="POST" action="user/delete">
+                                    <button class="btn btn-sm btn-danger">Delete</button>
+                                </form>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
